--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,6 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.5.2",
-        "@types/node": "^16.18.79",
         "@types/react": "^18.2.51",
         "eslint": "^8.56.0",
         "framer-motion": "^11.0.3",
@@ -25,7 +24,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "fmt": "npx prettier --write ."
     },
     "eslintConfig": {
         "extends": [
@@ -46,7 +46,9 @@
         ]
     },
     "devDependencies": {
+        "@types/node": "^20.11.16",
         "@types/react-dom": "^18.2.18",
+        "react-router-dom": "^6.22.0",
         "tailwindcss": "^3.4.1"
     }
 }
