--- a/client/package.json
+++ b/client/package.json
@@ -50,7 +50,9 @@
         "@types/node": "^20.11.16",
         "@types/react-dom": "^18.2.18",
         "@types/react-lottie": "^1.2.10",
+        "axios": "^1.6.7",
         "react-router-dom": "^6.22.0",
-        "tailwindcss": "^3.4.1"
+        "tailwindcss": "^3.4.1",
+        "zod": "^3.23.0-canary.20231004T224911"
     }
 }
