--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "fmt": "npx prettier --write ."
+        "fmt": "npx prettier --write .",
+        "dev": "react-scripts start"
     },
     "eslintConfig": {
         "extends": [
