--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
         "@types/react": "^18.2.51",
         "eslint": "^8.56.0",
         "framer-motion": "^11.0.3",
+        "i18next": "^23.9.0",
+        "lottie-react": "^2.4.0",
         "prettier": "^3.2.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-lottie": "^1.2.4",
+        "react-i18next": "^14.0.5",
         "react-scripts": "5.0.1",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
