--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
         "@chakra-ui/react": "^2.8.2",
         "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
+        "@fortawesome/fontawesome-free": "^6.5.1",
+        "@fortawesome/free-brands-svg-icons": "^6.5.1",
+        "@fortawesome/free-solid-svg-icons": "^6.5.1",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.5.2",
         "@types/react": "^18.2.51",
         "eslint": "^8.56.0",
+        "fortawesome": "^0.0.1-security",
         "framer-motion": "^11.0.3",
         "i18next": "^23.9.0",
         "lottie-react": "^2.4.0",
